--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,150 @@
-# Prerequisites
-*.d
+# Ignore everything
+*
+/*.DS_Store
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Don't ignore directories, so we can recurse into them
+!*/
 
-# Precompiled Headers
-*.gch
-*.pch
+# Ignore Tmp
+/Build/Bin_tmp/**
+/Build/Build_tmp/**
+/Build/Bin_const/**
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# Java workspace
+**/.metadata/**
+**/RemoteSystemsTempFiles/**
 
-# Fortran module files
-*.mod
-*.smod
+# Don't ignore .git*
+!.gitignore
+!.gitattributes
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Don't ignore sources
+!*.c
+!*.cc
+!*.cpp
+!*.cmm
+!*.m
+!*.cxx
+!*.h
+!*.hpp
+!*.hxx
+!*.java
+!*.properties
+!*.js
+!*.sln
+!*.def
+!*.vcxproj.
+!*.vcxproj.filters
+!*.rc
+!*.idl
+!*.xml
+!*.py
+!*.proj
+!*.sh
+!*.sh.*
+!*.elay
+!*.make
+!*.ebp
+!*.ld
+!*.S
+!*.s
+!*.asm
+!*.ASM
+!*.qml
+!*.qmlproject
 
-# Executables
-*.exe
-*.out
-*.app
+#
+!*.jar
+
+# Don't ignore thrift
+!*.thrift
+
+# Don't ignore protobuf
+!*.proto
+!*.proto2
+!*.proto3
+
+# Don't ignore pojects
+!.project
+!*.pro
+!*.pri
+
+# Don't ignore Qt UI
+!*.ui
+
+# Don't ignore android
+!*.mk
+
+# Don't ignore config
+!*.cfg
+!*.conf
+!*.config
+!*.ini
+!*.INI
+
+# Don't ignore scripts
+!*.sh
+
+# Don't ignore ssl
+!*.pem
+
+# Don't ignore resources
+!*.fanim
+!*.fskel
+!*.cond
+!*.json
+!*.glfs
+!*.glvs
+!*.glgs
+!*.shader
+!*.material
+!*.texture
+!*.renderbuff
+!*.pgen
+!*.pup
+!*.fphys
+!*.scene
+!*.xml
+!*.odt
+!*.pdf
+!*.txt
+!*.qml
+!*.docx
+!*.xls
+!*.xlsx
+!*.doc
+!*.sdl
+!*.zip
+!*.rar
+!*.qrc
+!*.png
+!*.html
+!*.htm
+!*.csv
+!*.zip
+!*.7z
+!*.dbf
+!*.prj
+!*.qpj
+!*.shp
+!*.shx
+!*.gz
+!*.raw
+!*.route
+!*.pg_dump
+!*.sql
+!*.pg_dump
+!*.bin
+!*.scn
+!*.md
+
+# Don't ignore DIY layouts
+!*.lay6
+!*.gbr
+
+moc_*.cpp
+
+# Ignore CMake files
+CMakeCache.txt
+/CMakeFiles/
+install_manifest.txt
